# Fun_to_graph

./: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Fun_to_graph  README.md  main.cpp
FunctionReader/: FunctionReader.cpp  FunctionReader.h  TestFunctionReader.cpp
LaTeXGraphGenerator/: LaTeXGraphGenerator.cpp  LaTeXGraphGenerator.h  TestLaTeXGraphGenerator.cpp
PDFCreator/: PDFCreator.cpp  PDFCreator.h  TestPDFCreator.cpp
examples/: combined_function.txt  cubic_function.txt  downward_parabola.txt  exponential_decay.txt  linear_function.txt  logarithm_base_10.txt  logarithmic_function.txt  multiple_functions_1.txt  multiple_functions_2.txt  multiple_functions_3.txt  oscillating_exponential.txt  piecewise_function.txt  polynomial_function.txt  quadratic_function.txt  rational_function.txt  sine_wave_function.txt  step_function.txt
